--- a/projects/wheather-apk/style.css
+++ b/projects/wheather-apk/style.css
@@ -37,6 +37,7 @@ body{
 .dp-season img{
     -webkit-animation: spin 10s linear infinite;
     animation: spin 10s linear infinite;
+    width: 50%;
 } 
 @keyframes spin {
     0% { transform: rotate(0deg); }
@@ -47,7 +48,7 @@ body{
     font-size: 50px;
     color:white;
     font-family: 'Black Ops One', system-ui;
-
+    margin-top: 0px;
 }
 
 .dp-season h2{ 
