--- a/projects/wheather-apk/style.css
+++ b/projects/wheather-apk/style.css
@@ -5,10 +5,10 @@ body{
 #main{
     /* margin: 10rem 30rem; */
     padding: 3rem;
-    background: linear-gradient(to bottom, #33ccff 0%, #ff99cc 100%);
+    background: linear-gradient(to bottom, #33ccff 0%, #a94e7b 100%);
     border-radius: 50px;
     width: 100%;
-    max-width: 350px;
+    max-width: 330px;
     justify-content: center;
 }
 
@@ -29,6 +29,11 @@ body{
     border-radius: 2rem;
     border: none;
     outline: none;
+}
+
+button{
+    background: none;
+    border: none;
 }
 
 .dp-season{
@@ -72,4 +77,8 @@ body{
     font-family: 'Black Ops One', system-ui;
     line-height: 10px;
     font-weight: 800;
+}
+
+.detail{
+    display: none;
 }
